[package]
name = "golinks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = {version = "4", default-features = false }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
env_logger = "0.9.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
awc = { version = "3.0.0", default-features = false, features = ["rustls"] }
rustls = "0.20.4"
clap = { version = "3.1.6", features = ["derive", "env"] }
service-binding = "0.3.0"

[dev-dependencies]
actix-rt = "2.7"

# This is required by cargo vendor during docker builds
[[bin]]
path = "src/main.rs"
name = "main"
