[package]
name = "golinks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = {version = "4", default-features = false }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
env_logger = "0.11.2"
uuid = { version = "1.7", features = ["serde", "v4"] }
awc = { version = "3.4.0", default-features = false, features = ["rustls"] }
rustls = "0.22.2"
clap = { version = "4.5.1", features = ["derive", "env"] }
service-binding = "1.1.0"
thiserror = "1.0.58"

[dev-dependencies]
actix-rt = "2.9"

# This is required by cargo vendor during docker builds
[[bin]]
path = "src/main.rs"
name = "main"
